기타 코드 추가 작업

--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -112,7 +112,7 @@
                     // 코드 표시를 위한 span 생성
                     if (syllable.chord) {
                         const chordSpan = document.createElement('span');
-                        chordSpan.className = `chord absolute text-[14.5px] -top-[1.7em] ${syllableObject.chord.length=== 1 && 'left-0.5'} ${syllableObject.chord.length=== 2 && '-left-[2px]'} ${syllableObject.chord.length=== 3 && '-left-[8px]'} ${syllableObject.chord.length=== 4 && '-left-[9px]'} ${syllableObject.chord.length=== 5 && '-left-[12px]'} font-semibold text-green-600 w-full tracking-tighter`;
+                        chordSpan.className = `chord absolute text-[14.5px] -top-[1.7em] ${syllableObject.chord.length=== 1 && 'left-0.5'} ${syllableObject.chord.length=== 2 && '-left-[2px]'} ${syllableObject.chord.length=== 3 && '-left-[8px]'} ${syllableObject.chord.length=== 4 && '-left-[9px]'} ${syllableObject.chord.length=== 5 && '-left-[12px]'} ${syllableObject.chord.length=== 6 && '-left-[13px]'} font-semibold text-green-600 w-full tracking-tighter`;
                         chordSpan.textContent = syllable.chord;
                         syllableSpan.appendChild(chordSpan);
                     }
@@ -168,12 +168,12 @@
                                 // 기존 코드가 있다면 대체
                                 if (existingChord) {
                                     existingChord.textContent = `${syllableObject.chord}`;
-                                    existingChord.className = `chord absolute text-[14.5px] -top-[1.7em] ${syllableObject.chord.length=== 1 && 'left-0.5'} ${syllableObject.chord.length=== 2 && '-left-[2px]'} ${syllableObject.chord.length=== 3 && '-left-[8px]'} ${syllableObject.chord.length=== 4 && '-left-[9px]'} ${syllableObject.chord.length=== 5 && '-left-[12px]'} font-semibold text-green-600 w-full tracking-tighter`;
+                                    existingChord.className = `chord absolute text-[14.5px] -top-[1.7em] ${syllableObject.chord.length=== 1 && 'left-0.5'} ${syllableObject.chord.length=== 2 && '-left-[2px]'} ${syllableObject.chord.length=== 3 && '-left-[8px]'} ${syllableObject.chord.length=== 4 && '-left-[9px]'} ${syllableObject.chord.length=== 5 && '-left-[12px]'} ${syllableObject.chord.length=== 6 && '-left-[13px]'} font-semibold text-green-600 w-full tracking-tighter`;
                                 } else {
                                     // 코드가 처음으로 추가될 경우
                                     const chordSpan = document.createElement('span');
                                     chordSpan.textContent = `${syllableObject.chord}`;
-                                    chordSpan.className = `chord absolute text-[14.5px] -top-[1.7em] ${syllableObject.chord.length=== 1 && 'left-0.5'} ${syllableObject.chord.length=== 2 && '-left-[2px]'} ${syllableObject.chord.length=== 3 && '-left-[8px]'} ${syllableObject.chord.length=== 4 && '-left-[9px]'} ${syllableObject.chord.length=== 5 && '-left-[12px]'} font-semibold text-green-600 w-full tracking-tighter`;
+                                    chordSpan.className = `chord absolute text-[14.5px] -top-[1.7em] ${syllableObject.chord.length=== 1 && 'left-0.5'} ${syllableObject.chord.length=== 2 && '-left-[2px]'} ${syllableObject.chord.length=== 3 && '-left-[8px]'} ${syllableObject.chord.length=== 4 && '-left-[9px]'} ${syllableObject.chord.length=== 5 && '-left-[12px]'} ${syllableObject.chord.length=== 6 && '-left-[13px]'} font-semibold text-green-600 w-full tracking-tighter`;
                                     syllableSpan.appendChild(chordSpan);
                                 }
 
