--- a/src/main/resources/templates/fragments/chordSelector.html
+++ b/src/main/resources/templates/fragments/chordSelector.html
@@ -5,11 +5,11 @@
         // 기타 코드 데이터
         const chordData = {
             "A 코드": [
-                "A", "A#", "Ab", "Am", "A#m", "Abm", "A7", "Am7", "Asus4", "Asus2",
-                "AM7", "A6", "Am6", "A9", "Aadd9", "Adim", "Aaug", "A5", "A13"
+                "A", "A#", "Ab", "Am", "A#m", "Abm", "A7", "Am7", "Am7/G", "A7sus4", "Asus4", "Asus2",
+                "AM7", "A6", "Am6", "A9", "Am9", "Aadd9", "Adim", "Aaug", "A5", "A13"
             ],
             "B 코드": [
-                "B", "B#", "Bb", "Bm", "B#m", "Bbm", "B7", "Bm7", "Bsus4", "Bsus2",
+                "B", "B#", "Bb", "Bm", "Bm11", "B#m", "Bbm", "B7", "Bm7", "Bsus4", "Bsus2",
                 "BM7", "B6", "Bm6", "B9", "Badd9", "Bdim", "Baug", "B5", "B13"
             ],
             "C 코드": [
@@ -17,11 +17,11 @@
                 "CM7", "C6", "Cm6", "C9", "Cadd9", "Cdim", "Caug", "C5", "C13"
             ],
             "D 코드": [
-                "D", "D#", "Db", "Dm", "D#m", "Dbm", "D7", "Dm7", "Dsus4", "Dsus2",
-                "DM7", "D6", "Dm6", "D9", "Dadd9", "Ddim", "Daug", "D5", "D13"
+                "D", "D#", "Db", "Dm", "D#m", "Dbm", "D7", "Dm7", "D7sus4", "Dsus4", "Dsus2",
+                "DM7", "D6", "Dm6", "D9", "Dadd9", "Ddim", "Daug", "D5", "D13", "D/F#"
             ],
             "E 코드": [
-                "E", "E#", "Eb", "Em", "E#m", "Ebm", "E7", "Em7", "Esus4", "Esus2",
+                "E", "E#", "Eb", "Em", "E#m", "Ebm", "E7", "Em7", "E7sus4", "Esus4", "Esus2",
                 "EM7", "E6", "Em6", "E9", "Eadd9", "Edim", "Eaug", "E5", "E13"
             ],
             "F 코드": [
@@ -30,7 +30,7 @@
             ],
             "G 코드": [
                 "G", "G#", "Gb", "Gm", "G#m", "Gbm", "G7", "Gm7", "Gsus4", "Gsus2",
-                "GM7", "G6", "Gm6", "G9", "Gadd9", "Gdim", "Gaug", "G5", "G13"
+                "GM7", "G6", "Gm6", "G9", "Gadd9", "Gdim", "Gaug", "G5", "G13", "G/B"
             ]
         };
 
