#, / 을 svguitar가 인식 못하는 문제 해결 (id때문)

--- a/src/main/resources/templates/chordDetail.html
+++ b/src/main/resources/templates/chordDetail.html
@@ -330,7 +330,7 @@
 
                             // 코드 다이어그램을 툴팁에 추가
                             const tooltipChordDiagramDiv = document.createElement('div');
-                            tooltipChordDiagramDiv.id = `tooltipChordric_${syllable.chord}_${syllableIndex}`;
+                            tooltipChordDiagramDiv.id = `tooltipChord_${rowIndex}_${syllableIndex}`;
                             tooltipChordDiagramDiv.className = 'w-[60px] bg-transparent';
                             tooltipCard.appendChild(tooltipChordDiagramDiv);
 
