--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -3,7 +3,7 @@
     <div class="space-y-10">
         <div class="space-y-1 border-b pb-3">
             <div class="text-4xl font-bold">악보 제작</div>
-            <div class="text-zinc-500">Chordric에 직접 제작한 기타 악보를 등록하고, 다른 사람들과 공유해보세요.</div>
+            <div class="text-zinc-500">Frety에 직접 제작한 기타 악보를 등록하고, 다른 사람들과 공유해보세요.</div>
         </div>
 
         <form method="post" th:object="${chordCreateForm}" id="chordCreateForm" class="space-y-10">
@@ -39,7 +39,7 @@
                 <div class="text-sm ml-2.5">
                     <div>1. 입력 칸에 가사 한 행을 작성한 후, 엔터를 눌러보세요.</div>
                     <div>2. 가사의 각 음절을 클릭하면, 기타 코드를 지정할 수 있습니다. (공백에도 지정 가능)</div>
-                    <div>3. 악보 작성을 마쳤다면, 등록 버튼을 눌러 당신의 가사를 Chordric에 공유해 보세요!</div>
+                    <div>3. 악보 작성을 마쳤다면, 등록 버튼을 눌러 당신의 악보를 Frety에 공유해 보세요!</div>
                 </div>
             </div>
 
