--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,7 +15,7 @@
     <!--svguitar-->
     <script src="https://omnibrain.github.io/svguitar/js/svguitar.umd.js"></script>
 
-    <title>Chordric</title>
+    <title>Frety</title>
 </head>
 <body>
 
