--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -2,16 +2,16 @@
 <div layout:fragment="content">
     <div class="px-5 space-y-5">
         <div class="space-y-1 border-b pb-3">
-            <div class="text-4xl font-bold" th:text="${keyword != null} ? ${keyword} : '검색어를 입력하세요'"></div>
+            <div class="text-4xl font-bold" th:text="${keyword != null && !keyword.isEmpty()} ? ${keyword} : '검색어를 입력하세요'"></div>
 
             <div class="text-zinc-500">검색결과</div>
         </div>
 
-        <div th:if="${results.empty}">
+        <div th:if="${results.isEmpty()}">
             <p class="text-center text-gray-600 text-sm py-20">검색 결과가 없습니다.</p>
         </div>
 
-        <div th:if="${!results.empty}">
+        <div th:if="${!results.isEmpty()}">
             <div class="overflow-x-auto p-2">
                 <table class="table">
                     <thead>
