--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -23,6 +23,17 @@
                     Song
                     <input type="text" id="song" th:field="*{song}" class="grow"/>
                 </label>
+
+                <div class="flex space-x-2">
+                    <!--카포 선택 박스-->
+                    <div th:replace="~{fragments/capoSelector :: capoSelector}"></div>
+                    <!--키 선택 박스-->
+                    <div th:replace="~{fragments/keySelector :: keySelector}"></div>
+                    <!--난이도 선택 박스-->
+                    <div th:replace="~{fragments/playingStylesSelector :: playingStylesSelector}"></div>
+                    <!--난이도 선택 박스-->
+                    <div th:replace="~{fragments/difficultySelector :: difficultySelector}"></div>
+                </div>
             </div>
 
             <!--악보 제작 방법-->
