--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -4,7 +4,7 @@
         <div class="drawer-content flex flex-col">
             <div class="navbar bg-base-100 w-full">
                 <div class="flex-1">
-                    <a th:href="@{/}" class="btn btn-ghost text-xl">Frety</a>
+                    <a th:href="@{/}" class="px-5 text-3xl font-bold hover:text-gray-500 hover:scale-110 duration-300">Frety</a>
                 </div>
 
                 <div class="hidden flex-none lg:block">
