--- a/src/main/resources/templates/chordDetail.html
+++ b/src/main/resources/templates/chordDetail.html
@@ -8,14 +8,16 @@
             </div>
 
             <div class="flex justify-between pt-2">
-                <div class="flex items-center space-x-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                         class="size-6">
-                        <path fill-rule="evenodd"
-                              d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0Zm-5.5-2.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0ZM10 12a5.99 5.99 0 0 0-4.793 2.39A6.483 6.483 0 0 0 10 16.5a6.483 6.483 0 0 0 4.793-2.11A5.99 5.99 0 0 0 10 12Z"
-                              clip-rule="evenodd"/>
-                    </svg>
-                    <div th:if="${chord.author != null}" th:text="${chord.author.username}" class="text-sm"></div>
+                <div class="text-[14px]">
+                    <div>
+                        Capo :
+                        <span class="" th:text="${chord.capo}"></span>
+                    </div>
+
+                    <div>
+                        Style :
+                        <span class="" th:text="${chord.playingStyle}"></span>
+                    </div>
                 </div>
 
                 <!--코드 수정/삭제 버튼-->
@@ -50,33 +52,48 @@
         <div class="py-20 relative text-xl space-y-20 tracking-widest" id="lyricsContainer"></div>
         <input type="hidden" id="chordContent" th:value="${chord.content}"/>
 
-        <div class="flex justify-between border rounded-lg p-3">
-            <!--등록일, 수정일-->
-            <div class="flex space-x-1">
-                <div class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black py-2 px-3 space-y-0.5 tracking-wider">
-                    <div>등록</div>
-                    <div th:if="${chord.createAt != null}"
-                         th:text="${#temporals.format(chord.createAt, 'yyyy.MM.dd')}"></div>
+
+        <div>
+            <!--악보 제작자-->
+            <div class="flex items-center justify-end mb-2 space-x-0.5">
+                <div class="flex items-center space-x-0.5">
+                    <svg class="w-[22px] h-[22px]" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M 26.59375 3.0625 C 26.488281 3.0625 26.386719 3.113281 26.28125 3.21875 L 25.53125 3.96875 L 25.21875 3.65625 L 24.78125 4.0625 L 25.125 4.40625 L 24.6875 4.8125 L 24.375 4.5 L 23.9375 4.9375 L 24.25 5.25 L 23.53125 6 C 23.316406 6.214844 23.316406 6.410156 23.53125 6.625 L 19.34375 10.8125 C 18.410156 10.066406 17.414063 9.5 16.46875 9.21875 C 14.710938 8.699219 13.148438 9.074219 11.9375 10.28125 C 11.402344 10.816406 11.074219 11.46875 10.9375 12.25 C 10.71875 13.515625 9.601563 14.503906 8.28125 14.59375 C 6.839844 14.691406 5.574219 15.269531 4.625 16.21875 C 2.121094 18.722656 2.574219 23.265625 5.65625 26.34375 C 7.40625 28.09375 9.636719 29 11.6875 29 C 13.25 29 14.699219 28.457031 15.78125 27.375 C 16.730469 26.425781 17.308594 25.160156 17.40625 23.71875 C 17.496094 22.398438 18.453125 21.28125 19.71875 21.0625 C 20.5 20.925781 21.183594 20.597656 21.71875 20.0625 C 22.925781 18.855469 23.300781 17.289063 22.78125 15.53125 C 22.609375 14.945313 22.300781 14.347656 21.9375 13.75 L 20.46875 15.21875 C 20.625 15.519531 20.757813 15.808594 20.84375 16.09375 C 21.152344 17.132813 20.988281 17.980469 20.3125 18.65625 C 20.070313 18.894531 19.78125 19.027344 19.40625 19.09375 C 17.242188 19.46875 15.554688 21.367188 15.40625 23.59375 C 15.34375 24.542969 14.976563 25.363281 14.375 25.96875 C 12.648438 27.691406 9.394531 27.238281 7.09375 24.9375 C 4.792969 22.636719 4.308594 19.347656 6.03125 17.625 C 6.636719 17.023438 7.457031 16.65625 8.40625 16.59375 C 10.632813 16.445313 12.527344 14.757813 12.90625 12.59375 C 12.972656 12.21875 13.101563 11.929688 13.34375 11.6875 C 13.808594 11.222656 14.339844 11 14.96875 11 C 15.253906 11 15.582031 11.058594 15.90625 11.15625 C 16.535156 11.34375 17.238281 11.714844 17.90625 12.21875 L 14.5625 15.5625 C 14.382813 15.519531 14.195313 15.5 14 15.5 C 12.621094 15.5 11.5 16.621094 11.5 18 C 11.5 19.378906 12.621094 20.5 14 20.5 C 15.378906 20.5 16.5 19.378906 16.5 18 C 16.5 17.847656 16.464844 17.707031 16.4375 17.5625 L 25.53125 8.4375 C 25.746094 8.652344 25.972656 8.652344 26.1875 8.4375 L 26.9375 7.6875 L 27.25 8 L 27.65625 7.59375 L 27.34375 7.28125 L 27.78125 6.84375 L 28 7.28125 L 28.40625 6.84375 L 28.09375 6.53125 L 28.84375 5.78125 C 29.058594 5.566406 29.058594 5.339844 28.84375 5.125 L 26.9375 3.21875 C 26.832031 3.113281 26.699219 3.0625 26.59375 3.0625 Z M 26.5 4.28125 L 26.9375 4.71875 L 25 6.625 L 24.59375 6.21875 Z M 27.34375 5.03125 L 27.78125 5.46875 L 25.84375 7.375 L 25.4375 6.9375 Z M 9.09375 19.6875 L 7.6875 21.09375 L 10.90625 24.3125 L 12.3125 22.90625 Z"/>
+                    </svg>
+                    <div class="text-sm">제작 :</div>
                 </div>
 
-                <div th:if="${chord.updateAt != null}"
-                     class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black py-2 px-3 space-y-0.5 tracking-wider">
-                    <div>수정</div>
-                    <div th:text="${#temporals.format(chord.updateAt, 'yyyy.MM.dd')}"></div>
-                </div>
+                <div th:if="${chord.author != null}" th:text="${chord.author.username}" class="text-sm"></div>
             </div>
 
-            <!--좋아요-->
-            <div class="flex flex-col items-center justify-center space-y-2">
-                <a th:id="|vote_${chord.id}|"></a>
-                <div class="badge badge-outline border-neutral-400" th:text="${#lists.size(chord.voter)}"></div>
+            <div class="flex justify-between border rounded-lg p-3">
+                <!--등록일, 수정일-->
+                <div class="flex space-x-1">
+                    <div class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black py-2 px-3 space-y-0.5 tracking-wider">
+                        <div>등록</div>
+                        <div th:if="${chord.createAt != null}"
+                             th:text="${#temporals.format(chord.createAt, 'yyyy.MM.dd')}"></div>
+                    </div>
 
-                <div onclick="handleVote(this)"
-                     th:attr="uri=@{|/chord/vote/${chord.id}|}"
-                     class="recommend p-3 rounded-full hover:bg-base-200 active:scale-90 duration-100">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
-                        <path d="M1 8.25a1.25 1.25 0 1 1 2.5 0v7.5a1.25 1.25 0 1 1-2.5 0v-7.5ZM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0 1 14 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 0 1-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 0 1-1.341-.317l-2.734-1.366A3 3 0 0 0 6.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 0 1 2.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388Z"/>
-                    </svg>
+                    <div th:if="${chord.updateAt != null}"
+                         class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black py-2 px-3 space-y-0.5 tracking-wider">
+                        <div>수정</div>
+                        <div th:text="${#temporals.format(chord.updateAt, 'yyyy.MM.dd')}"></div>
+                    </div>
+                </div>
+
+                <!--좋아요-->
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <a th:id="|vote_${chord.id}|"></a>
+                    <div class="badge badge-outline border-neutral-400" th:text="${#lists.size(chord.voter)}"></div>
+
+                    <div onclick="handleVote(this)"
+                         th:attr="uri=@{|/chord/vote/${chord.id}|}"
+                         class="recommend p-3 rounded-full hover:bg-base-200 active:scale-90 duration-100">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
+                            <path d="M1 8.25a1.25 1.25 0 1 1 2.5 0v7.5a1.25 1.25 0 1 1-2.5 0v-7.5ZM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0 1 14 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 0 1-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 0 1-1.341-.317l-2.734-1.366A3 3 0 0 0 6.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 0 1 2.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388Z"/>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </div>
@@ -217,7 +234,8 @@
                     <div th:if="${reply.author.username == #authentication.name}"
                          th:classappend="${reply.author.username == chord.author.username} ? 'justify-end' : 'justify-start'"
                          class="flex items-center space-x-1">
-                        <button type="button" onclick="editReplyGet(this)" th:attr="replyId=${reply.id}" class="btn btn-xs" th:text="수정"></button>
+                        <button type="button" onclick="editReplyGet(this)" th:attr="replyId=${reply.id}"
+                                class="btn btn-xs" th:text="수정"></button>
 
                         <button type="button" onclick="deleteMethod(this)" class="btn btn-xs"
                                 th:data-uri="@{|/reply/delete/${reply.id}|}"
