--- a/src/main/resources/templates/fragments/capoSelector.html
+++ b/src/main/resources/templates/fragments/capoSelector.html
@@ -1,8 +1,20 @@
-<div th:fragment="capoSelector" id="capoSelector">
-    <select class="select select-bordered w-full max-w-xs">
-        <option disabled selected>Capo</option>
-        <option>1Capo</option>
-        <option>2Capo</option>
-        <option>3Capo</option>
+<label th:fragment="capoSelector" id="capoSelector" class="form-control w-full">
+    <div class="label">
+        <span class="label-text">Capo</span>
+    </div>
+
+    <select name="capo" th:field="*{capo}" class="select select-bordered">
+        <option value="No Capo">No Capo</option>
+        <option value="Capo 1">Capo 1</option>
+        <option value="Capo 2">Capo 2</option>
+        <option value="Capo 3">Capo 3</option>
+        <option value="Capo 4">Capo 4</option>
+        <option value="Capo 5">Capo 5</option>
+        <option value="Capo 6">Capo 6</option>
+        <option value="Capo 7">Capo 7</option>
+        <option value="Capo 8">Capo 8</option>
+        <option value="Capo 9">Capo 9</option>
+        <option value="한음 내림 튜닝 (Whole Step Down Tuning)">한음 내림 튜닝 (Whole Step Down Tuning)</option>
+        <option value="반음 내림 튜닝 (Half Step Down Tuning)">반음 내림 튜닝 (Half Step Down Tuning)</option>
     </select>
-</div>
+</label>
