--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -44,29 +44,25 @@
                     <div class="text-sm font-semibold">악보 제작 방법</div>
                 </div>
                 <div class="text-sm ml-2.5">
-                    <div>1. 입력 칸에 가사 한 행을 작성한 후, 엔터를 눌러보세요.</div>
+                    <div>1. 입력 칸에 가사를 입력한 후, 엔터를 눌러보세요.</div>
                     <div>2. 가사의 각 음절을 클릭하면, 기타 코드를 지정할 수 있습니다. (공백에도 지정 가능)</div>
                     <div>3. 악보 작성을 마쳤다면, 등록 버튼을 눌러 당신의 악보를 Frety에 공유해 보세요!</div>
                 </div>
             </div>
 
-            <div>
-                <!--코드 지정가능한 가사 한 행 업로드-->
-                <div id="uploadedLyrics"
-                     class="flex flex-col relative text-xl space-y-10 tracking-widest">
+            <!--코드 지정가능한 가사 한 행 업로드-->
+            <div id="uploadedLyrics"
+                 class="flex flex-col relative text-xl space-y-10 tracking-widest">
 
-                    <!--코드 선택 박스-->
-                    <div th:replace="~{fragments/chordSelector :: chordSelector}"></div>
-                </div>
+                <!--코드 선택 박스-->
+                <div th:replace="~{fragments/chordSelector :: chordSelector}"></div>
             </div>
 
-            <!--가사 한 행 입력 칸-->
-            <label class="input input-bordered flex items-center gap-2">
-                <input type="text" id="content" th:field="*{content}" class="grow text-center"
-                       placeholder="한 행 씩 입력해주세요."
-                       onkeydown="handleEnter(event)"
-                />
-            </label>
+            <!--가사 입력 칸-->
+            <textarea id="content" th:field="*{content}" class="textarea textarea-bordered w-full h-[400px] text-center"
+                      placeholder="한 행 씩 입력해주세요."
+                      onkeydown="handleEnter(event)"
+            ></textarea>
 
             <div th:replace="~{fragments/form_errors :: formErrorsFragment}"></div>
 
