--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="text-sm ml-2.5">
                     <div>1. 수정하고자 하는 가사의 음절을 클릭하면, 기타 코드를 수정할 수 있습니다. (공백에도 수정 가능)</div>
-                    <div>2. 악보 수정을 마쳤다면, 수정 완료 버튼을 눌러 수정된 가사를 Chordric에 공유해 보세요!</div>
+                    <div>2. 악보 수정을 마쳤다면, 수정 완료 버튼을 눌러 수정된 가사를 Frety에 공유해 보세요!</div>
                 </div>
             </div>
 
@@ -59,13 +59,11 @@
                 <div th:replace="~{fragments/chordSelector :: chordSelector}"></div>
             </div>
 
-            <!--가사 한 행 입력 칸-->
-            <label class="input input-bordered flex items-center gap-2">
-                <input type="text" id="content" class="grow text-center"
-                       placeholder="한 행 씩 입력해주세요."
-                       onkeydown="handleEnter(event)"
-                />
-            </label>
+            <!--가사 입력 칸-->
+            <textarea id="content" class="textarea textarea-bordered w-full h-[400px] text-center"
+                      placeholder="한 행 씩 입력해주세요."
+                      onkeydown="handleEnter(event)"
+            ></textarea>
 
             <div th:replace="~{fragments/form_errors :: formErrorsFragment}"></div>
 
@@ -77,12 +75,6 @@
         const lyricsData = []; // 각 음절과 코드 데이터를 관리할 배열
         let selectedSyllable = null; // 현재 선택된 음절을 저장할 변수
         const uploadedLyrics = document.getElementById('uploadedLyrics');
-
-        // 수정 완료 버튼 누를 때 백엔드로 전송되기 전 객체-배열 을 json문자열로 변환하여 input태그에 설정
-        document.getElementById('chordCreateForm').addEventListener('submit', function () {
-            const lyricsDataInput = document.getElementById('lyricsDataInput');
-            lyricsDataInput.value = JSON.stringify(lyricsData);
-        });
 
         // 기존 가사 행 수정
         document.addEventListener("DOMContentLoaded", function () {
@@ -215,6 +207,12 @@
 
                 contentContainer.appendChild(lineContainer);
             });
+        });
+
+        // 수정 완료 버튼 누를 때 백엔드로 전송되기 전 객체-배열 을 json문자열로 변환하여 input태그에 설정
+        document.getElementById('chordCreateForm').addEventListener('submit', function () {
+            const lyricsDataInput = document.getElementById('lyricsDataInput');
+            lyricsDataInput.value = JSON.stringify(lyricsData);
         });
     </script>
 
