--- a/src/main/resources/templates/fragments/chordSelector.html
+++ b/src/main/resources/templates/fragments/chordSelector.html
@@ -1,5 +1,5 @@
 <div th:fragment="chordSelector" id="chordSelector"
-     class="hidden z-[1000] absolute left-0 top-1/2 w-[120px] h-[250px] overflow-y-auto p-1 bg-white rounded-lg shadow-lg tracking-normal">
+     class="hidden z-[1000] absolute left-0 top-1/2 w-[150px] h-[300px] overflow-y-auto border border-gray-100 p-1 bg-white rounded-lg shadow-lg tracking-normal">
 
     <script>
         // 기타 코드 데이터
