--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -85,10 +85,19 @@
     <!--한글 입력 시 반복문제 해결-->
     <script src="/script/handleComposing.js"></script>
 
-    <!--음절 클릭 이벤트-->
-    <script src="/script/handleSyllableClick.js"></script>
+    <!--음절 클릭-->
+    <script src="/script/handleSyllable.js"></script>
 
-    <!--행 업로드-->
+    <!--가사 입력-->
     <script src="/script/handleEnter.js"></script>
+
+    <!--한 행씩 업로드-->
+    <script src="/script/addLineToView.js"></script>
+
+    <!--코드 선택-->
+    <script src="/script/selectedChord.js"></script>
+
+    <!--한 행 삭제-->
+    <script src="/script/removeLine.js"></script>
 </div>
 </html>
