요구사항정의에 맞게 수정

--- a/src/main/resources/templates/chordDetail.html
+++ b/src/main/resources/templates/chordDetail.html
@@ -126,7 +126,7 @@
                     rows="15">
             </textarea>
 
-            <input class="btn" type="submit" value="등록"/>
+            <input class="btn btn-neutral" type="submit" value="등록"/>
         </form>
 
         <!-- 댓글 목록 -->
