--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
 
         <div>
             <div class="flex justify-end">
-                <a class="btn" th:href="@{/chord/create}">악보 제작</a>
+                <a class="btn btn-neutral" th:href="@{/chord/create}">악보 제작</a>
             </div>
 
             <div role="tablist" class="tabs tabs-lifted">
