--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -43,10 +43,15 @@
 
                     <div class="text-sm font-semibold">악보 제작 방법</div>
                 </div>
-                <div class="text-sm ml-2.5">
+                <div class="text-sm ml-2.5 space-y-1">
                     <div>1. 입력 칸에 가사를 입력한 후, <span class="font-bold">Enter Key(엔터)</span>를 눌러 가사를 업로드 하세요.</div>
+                    <div>
+                        <div class="ml-3.5 text-[13px] text-gray-500">- 직접 입력하실 경우 : 가사를 한 줄씩 입력해주세요.</div>
+                        <div class="ml-3.5 text-[13px] text-gray-500">- 가사 전체를 한번에 붙혀넣기 하실 경우 : 각 줄이 한 줄씩 분리되어 업로드됩니다.
+                        </div>
+                    </div>
                     <div>2. 가사의 각 <span class="font-bold">음절</span>을 클릭하면, 기타 코드를 지정할 수 있습니다. (공백에도 지정 가능)</div>
-                    <div>3. 악보 작성을 마쳤다면, 등록 버튼을 눌러 당신의 악보를 Frety에 공유해 보세요!</div>
+                    <div>3. 악보 작성을 마쳤다면, 악보 등록 버튼을 눌러 당신의 악보를 Frety에 공유해 보세요!</div>
                 </div>
             </div>
 
@@ -66,7 +71,7 @@
 
             <div th:replace="~{fragments/form_errors :: formErrorsFragment}"></div>
 
-            <input type="submit" value="악보 등록" class="btn w-full"/>
+            <input type="submit" value="악보 등록" class="btn btn-neutral w-full"/>
         </form>
     </div>
 
