--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -3,7 +3,7 @@
     <div class="space-y-10">
         <div class="space-y-1 border-b pb-3">
             <div class="text-4xl font-bold">악보 수정</div>
-            <div class="text-zinc-500">코드와 가사를 수정하여 완성도 높은 악보를 제작해 보세요.</div>
+            <div class="text-zinc-500">악보 수정을 통해 완성도 높은 악보를 만들어 보세요.</div>
         </div>
 
         <form method="post" th:object="${chordCreateForm}" id="chordCreateForm" class="space-y-10">
@@ -46,8 +46,8 @@
                     <div class="text-sm font-semibold">악보 수정 방법</div>
                 </div>
                 <div class="text-sm ml-2.5">
-                    <div>1. 수정하고자 하는 가사의 음절을 클릭하면, 기타 코드를 수정할 수 있습니다. (공백에도 수정 가능)</div>
-                    <div>2. 악보 수정을 마쳤다면, 수정 완료 버튼을 눌러 수정된 가사를 Frety에 공유해 보세요!</div>
+                    <div>1. 수정하고자 하는 <span class="font-bold">음절</span>을 클릭하면, 기타 코드를 수정할 수 있습니다. (공백에도 수정 가능)</div>
+                    <div>2. 악보 수정을 마쳤다면, 악보 수정 버튼을 눌러 수정된 가사를 Frety에 공유해 보세요!</div>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
 
             <div th:replace="~{fragments/form_errors :: formErrorsFragment}"></div>
 
-            <input type="submit" value="수정 완료" class="btn w-full"/>
+            <input type="submit" value="악보 수정" class="btn btn-neutral w-full"/>
         </form>
     </div>
 
