--- a/src/main/resources/templates/fragments/chordSelector.html
+++ b/src/main/resources/templates/fragments/chordSelector.html
@@ -5,32 +5,39 @@
         // 기타 코드 데이터
         const chordData = {
             "A 코드": [
-                "A", "A#", "Ab", "Am", "A#m", "Abm", "A7", "Am7", "Am7/G", "A7sus4", "Asus4", "Asus2",
-                "AM7", "A6", "Am6", "A9", "Am9", "Aadd9", "Adim", "Aaug", "A5", "A13"
+                 "A", "A#", "A#7", "A#9", "A#M7", "A#m", "A#m7", "A#sus4", "A13", "A5",
+                 "A6", "A7", "A7sus4", "A9", "AM7", "Aadd9", "Aaug", "Ab", "Abm", "Adim",
+                 "Am", "Am11", "Am6", "Am7", "Am7/G", "Am9", "Asus2", "Asus4"
             ],
             "B 코드": [
-                "B", "B#", "Bb", "Bm", "Bm11", "B#m", "Bbm", "B7", "Bm7", "Bsus4", "Bsus2",
-                "BM7", "B6", "Bm6", "B9", "Badd9", "Bdim", "Baug", "B5", "B13"
+                 "B", "B#", "B#7", "B#9", "B#M7", "B#m", "B#m7", "B#sus4", "B13", "B5",
+                 "B6", "B7", "B7sus4", "B9", "BM7", "Badd9", "Baug", "Bb", "Bbm", "Bdim",
+                 "Bm", "Bm11", "Bm6", "Bm7", "Bm7/G", "Bm9", "Bsus2", "Bsus4"
             ],
             "C 코드": [
-                "C", "C#", "Cb", "Cm", "C#m", "Cbm", "C7", "Cm7", "Csus4", "Csus2",
-                "CM7", "C6", "Cm6", "C9", "Cadd9", "Cdim", "Caug", "C5", "C13"
+                 "C", "C#", "C#7", "C#9", "C#M7", "C#m", "C#m7", "C#sus4", "C13", "C5",
+                 "C6", "C7", "C7sus4", "C9", "CM7", "Cadd9", "Caug", "Cb", "Cbm", "Cdim",
+                 "Cm", "Cm11", "Cm6", "Cm7", "Cm7/G", "Cm9", "Csus2", "Csus4"
             ],
             "D 코드": [
-                "D", "D#", "Db", "Dm", "D#m", "Dbm", "D7", "Dm7", "D7sus4", "Dsus4", "Dsus2",
-                "DM7", "D6", "Dm6", "D9", "Dadd9", "Ddim", "Daug", "D5", "D13", "D/F#"
+                 "D", "D#", "D#7", "D#M7", "D#m", "D#m7", "D#sus4", "D/F#", "D13", "D5",
+                 "D6", "D7", "D7sus4", "D9", "DM7", "Dadd9", "Daug", "Db", "Dbm", "Ddim",
+                 "Dm", "Dm6", "Dm7", "Dsus2", "Dsus4"
             ],
             "E 코드": [
-                "E", "E#", "Eb", "Em", "E#m", "Ebm", "E7", "Em7", "E7sus4", "Esus4", "Esus2",
-                "EM7", "E6", "Em6", "E9", "Eadd9", "Edim", "Eaug", "E5", "E13"
+                 "E", "E#", "E#7", "E#M7", "E#m", "E#m7", "E#sus4", "E13", "E5", "E6",
+                 "E7", "E7sus4", "E9", "EM7", "Eadd9", "Eaug", "Eb", "Ebm", "Edim", "Em",
+                 "Em6", "Em7", "Esus2", "Esus4"
             ],
             "F 코드": [
-                "F", "F#", "Fb", "Fm", "F#m", "Fbm", "F7", "Fm7", "Fsus4", "Fsus2",
-                "FM7", "F6", "Fm6", "F9", "Fadd9", "Fdim", "Faug", "F5", "F13"
+                 "F", "F#", "F#7", "F#M7", "F#m", "F#m7", "F#m7-5", "F#sus4", "F13", "F5",
+                 "F6", "F7", "F9", "FM7", "Fadd9", "Faug", "Fb", "Fbm", "Fdim", "Fm",
+                 "Fm6", "Fm7", "Fsus2", "Fsus4"
             ],
             "G 코드": [
-                "G", "G#", "Gb", "Gm", "G#m", "Gbm", "G7", "Gm7", "Gsus4", "Gsus2",
-                "GM7", "G6", "Gm6", "G9", "Gadd9", "Gdim", "Gaug", "G5", "G13", "G/B"
+                 "G", "G#", "G#7", "G#M7", "G#m", "G#m7", "G#sus4", "G/B", "G13", "G5",
+                 "G6", "G7", "G9", "GM7", "Gadd9", "Gaug", "Gb", "Gbm", "Gdim", "Gm",
+                 "Gm6", "Gm7", "Gsus2", "Gsus4"
             ]
         };
 
