metadata 및 jsonld 적용중 (#4)

--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
 <html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<head>
+    <title th:text="${title}"></title>
+    <meta th:attr="content=${title}" name="title">
+    <meta th:attr="content=${description}" name="description">
+</head>
+
+<body>
 <div layout:fragment="content">
     <div class="space-y-10">
         <div class="space-y-1 border-b pb-3">
@@ -105,4 +113,5 @@
     <!--한 행 삭제-->
     <script src="/script/removeLine.js"></script>
 </div>
+</body>
 </html>
