--- a/src/main/resources/templates/chordDetail.html
+++ b/src/main/resources/templates/chordDetail.html
@@ -1,4 +1,12 @@
-<html layout:decorate="~{layout}">
+<!DOCTYPE html>
+<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<head>
+    <title th:text="${title}"></title>
+    <meta th:attr="content=${title}" name="title">
+    <meta th:attr="content=${description}" name="description">
+</head>
+
+<body>
 <div layout:fragment="content">
     <div class="px-5 space-y-10">
         <div>
@@ -601,4 +609,5 @@
     <script src="/script/chords.js"></script>
 
 </div>
+</body>
 </html>
