--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,9 +3,9 @@
 
 <th:block th:fragment="headFragment">
     <head>
-        <title>Frety</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="robots" content="index, follow">
 
         <!-- daisy UI CDN / tailwind CSS CDN-->
         <script src="https://cdn.tailwindcss.com"></script>
