--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -1,8 +1,17 @@
-<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<head>
+    <title th:text="${title}"></title>
+    <meta th:attr="content=${title}" name="title">
+    <meta th:attr="content=${description}" name="description">
+</head>
+
+<body>
 <div layout:fragment="content">
     <div class="px-5 space-y-5">
         <div class="space-y-1 border-b pb-3">
-            <div class="text-4xl font-bold" th:text="${keyword != null && !keyword.isEmpty()} ? ${keyword} : '검색어를 입력하세요'"></div>
+            <div class="text-4xl font-bold"
+                 th:text="${keyword != null && !keyword.isEmpty()} ? ${keyword} : '검색어를 입력하세요'"></div>
 
             <div class="text-zinc-500">검색결과</div>
         </div>
@@ -67,6 +76,6 @@
         </div>
 
     </div>
-
 </div>
+</body>
 </html>
