--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="index, follow">
+        <link rel="icon" href="https://www.frety.me/favicon.ico" type="image/x-icon"/>
 
         <!-- daisy UI CDN / tailwind CSS CDN-->
         <script src="https://cdn.tailwindcss.com"></script>
