가사 입력 시 줄바꿈 기능 추가

--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -53,9 +53,10 @@
                     </svg>
                     <div class="text-sm font-semibold">악보 수정 방법</div>
                 </div>
-                <div class="text-sm ml-2.5">
-                    <div>1. 수정하고자 하는 <span class="font-bold">음절</span>을 클릭하면, 기타 코드를 수정할 수 있습니다. (공백에도 수정 가능)</div>
-                    <div>2. 악보 수정을 마쳤다면, 악보 수정 버튼을 눌러 수정된 가사를 Frety에 공유해 보세요!</div>
+                <div class="text-sm ml-1.5 space-y-1">
+                    <div class="ml-5">1. 수정하고자 하는 <span class="font-bold">음절</span>을 클릭하여, <span class="font-bold">기타 코드</span>를 수정하세요. (공백에도 수정 가능)</div>
+                    <div class="ml-5">2. 가사와 코드를 새로 추가할 수 있습니다.</div>
+                    <div class="ml-5">3. 악보 수정을 마쳤다면, <span class="font-bold">악보 수정 버튼</span>을 눌러 수정된 가사를  <span class="font-bold">Frety</span>에 공유해 보세요!</div>
                 </div>
             </div>
 
@@ -69,7 +70,7 @@
 
             <!--가사 입력 칸-->
             <textarea id="content" class="textarea textarea-bordered w-full h-[400px] text-center"
-                      placeholder="한 행 씩 입력해주세요."
+                      placeholder="줄바꿈 : Shift + Enter / 업로드 : Enter"
                       onkeydown="handleEnter(event)"
             ></textarea>
 
