--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -51,15 +51,12 @@
 
                     <div class="text-sm font-semibold">악보 제작 방법</div>
                 </div>
-                <div class="text-sm ml-2.5 space-y-1">
-                    <div>1. 입력 칸에 가사를 입력한 후, <span class="font-bold">Enter Key(엔터)</span>를 눌러 가사를 업로드 하세요.</div>
-                    <div>
-                        <div class="ml-3.5 text-[13px] text-gray-500">- 직접 입력하실 경우 : 가사를 한 줄씩 입력해주세요.</div>
-                        <div class="ml-3.5 text-[13px] text-gray-500">- 가사 전체를 한번에 붙혀넣기 하실 경우 : 각 줄이 한 줄씩 분리되어 업로드됩니다.
-                        </div>
-                    </div>
-                    <div>2. 가사의 각 <span class="font-bold">음절</span>을 클릭하면, 기타 코드를 지정할 수 있습니다. (공백에도 지정 가능)</div>
-                    <div>3. 악보 작성을 마쳤다면, 악보 등록 버튼을 눌러 당신의 악보를 Frety에 공유해 보세요!</div>
+                <div class="text-sm ml-1.5 space-y-1">
+                    <div class="ml-5">1. 입력칸에 가사를 <span class="font-bold">직접 입력</span>하거나 <span class="font-bold">붙여넣기</span>하여 가사를 업로드하세요.</div>
+                    <div class="text-gray-500 ml-8"><span class="font-bold">- Shift + Enter : </span>가사 줄바꿈</div>
+                    <div class="text-gray-500 ml-8"><span class="font-bold">- Enter : </span>가사 업로드</div>
+                    <div class="ml-5">2. 가사의 각 <span class="font-bold">음절</span>을 클릭하여 <span class="font-bold">기타 코드</span>를 지정할 수 있습니다. (공백에도 코드 지정 가능)</div>
+                    <div class="ml-5">3. 악보 작성을 마쳤다면, <span class="font-bold">악보 등록 버튼</span>을 눌러 당신의 악보를 <span class="font-bold">Frety</span>에 공유하세요!</div>
                 </div>
             </div>
 
@@ -73,7 +70,7 @@
 
             <!--가사 입력 칸-->
             <textarea id="content" th:field="*{content}" class="textarea textarea-bordered w-full h-[400px] text-center"
-                      placeholder="입력 후 Enter Key(엔터)를 눌러주세요."
+                      placeholder="줄바꿈 : Shift + Enter / 업로드 : Enter"
                       onkeydown="handleEnter(event)"
             ></textarea>
 
