--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
-    <title th:text="${title}"></title>
-    <meta th:attr="content=${title}" name="title">
-    <meta th:attr="content=${description}" name="description">
+    <title>Frety</title>
+    <meta name="title" content="Frety - 프렛티">
+    <meta name="description" content="프렛위에서 완성되는 당신의 기타 코드">
 
-    <meta property="og:title" th:attr="content=${title}"/>
-    <meta property="og:description" th:attr="content=${description}"/>
+    <meta property="og:title" content="Frety - 프렛티"/>
+    <meta property="og:description" content="프렛위에서 완성되는 당신의 기타 코드"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.frety.me"/>
     <meta property="og:site_name" content="Frety - 프렛티"/>
