--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -145,7 +145,7 @@
                         const syllableRect = syllableSpan.getBoundingClientRect();
 
                         // 셀렉트 박스의 위치
-                        chordSelector.style.top = `${syllableRect.top + window.scrollY - chordSelector.offsetHeight - 260}px`;
+                        chordSelector.style.top = `${syllableRect.top + window.scrollY - chordSelector.offsetHeight - 200}px`;
 
                         // 현재 브라우저의 크기에 맞춰서 left 지정
                         const screenWidth = window.innerWidth;
@@ -167,8 +167,8 @@
                                 // 기존 코드가 있다면 가져오기
                                 let existingChord = syllableSpan.querySelector('.chord');
 
-                                // 삭제 선택 시 chord === null
-                                if(syllableObject.chord === "삭제"){
+                                // 코드 제거 선택 시 chord === null
+                                if(syllableObject.chord === "코드 제거"){
                                     syllableObject.chord = null;
                                     existingChord.remove(); // 코드 표시 제거
                                 }
@@ -187,6 +187,20 @@
 
                                 // 코드 선택기 숨김
                                 chordSelector.classList.add('hidden');
+
+                                // 검색창 데이터 초기화
+                                const chordSearchInput = document.getElementById('chordSearch');
+                                chordSearchInput.value = '';
+
+                                // 필터링된 결과 초기화
+                                const filteredChordDiv = document.getElementById('filteredChords');
+                                filteredChordDiv.innerHTML = '';
+
+                                // 검색어가 없거나 필터링된 결과가 없으면 코드 목록 다시 표시
+                                if (!chordSearchInput.value || Object.keys(filteredChordData).length === 0) {
+                                    filteredChordDiv.classList.add('hidden');
+                                    ulElement.classList.remove('hidden');
+                                }
                             }
                         };
                     };
